infrastructure/base/traefik-v2/traefik-daemonset-hostnetwork.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-v2-mgmt
  namespace: traefik-system
spec:
  ports:
    - name: mgmt
      port: 8080
      targetPort: mgmt
  selector:
    app: traefik-v2
  type: "ClusterIP"
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik-ingress-controller
  namespace: traefik-system
  labels:
    app: traefik-v2
spec:
  selector:
    matchLabels:
      app: traefik-v2
  template:
    metadata:
      name: traefik-v2
      labels:
        app: traefik-v2
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 30
      containers:
        - image: traefik:v2.3.7
          name: traefik-ingress-lb
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
            - name: mgmt
              containerPort: 8080  ## Traefik Dashboard 端口
              protocol: TCP
          resources:
            limits:
              cpu: 2000m
              memory: 2048Mi
            requests:
              cpu: 600m
              memory: 1024Mi
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          args:
            - --configfile=/config/traefik.yaml
          volumeMounts:
            - mountPath: /config
              name: config
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
      hostNetwork: true
      volumes:
        - name: config
          configMap:
            name: traefik-config
      tolerations:              ## 设置容忍所有污点，防止节点被设置污点
        - operator: "Exists"
      nodeSelector:             ## 设置node筛选器，在特定label的节点上启动
        IngressProxy: "true"
